--- a/.github/workflows/compress-and-release.yml
+++ b/.github/workflows/compress-and-release.yml
@@ -21,8 +21,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.USER_TOKEN }}
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: release-${{ github.run_id }}
+        release_name: Release ${{ github.run_id }}
         draft: false
         prerelease: false
 
